# telegram-sales-bot

./: .env.example  .gitignore  README.md  admin_ids.txt  alembic.ini  dispatcher.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 496cbd8d1106_init.py  789bef403a95_shopcard.py  92a2a5ab86f4_init.py  a909570fdf70_add_dialog_message.py  bba5153b8ac6_product_order_quantity_add.py  be3e63d0ae77_order_update_1.py  bfb566e3664b_product_image_file_id_add.py
config/: __init__.py  config.py
core/infrastructure/: __init__.py
core/infrastructure/database/: database_manager.py
core/infrastructure/repositories/: __init__.py  abstract_repository.py  dialog_repository.py  message_repository.py  order_repository.py  product_repository.py  repository.py  shop_card_repository.py  user_repository.py
core/infrastructure/services/: __init__.py  admin_service.py  catalog_service.py  dialog_service.py  order_service.py  (+2 more)
data/: __init__.py  command_list.json  command_list.py
filters/: __init__.py  admin_filter.py  text.py
handlers/: __init__.py  catalog.py  handle_router.py  initial.py  messages.py  order.py  pagination.py  product_add.py  product_delete.py  product_edit.py  shop_card.py  states.py
keyboards/: __init__.py  catalog_keyboard.py  message_keyboard.py  order_keyboard.py  shop_card_keyboard.py
logger/: __init__.py  colors.py  formatter.py  logger_builder.py
middleware/: __init__.py  admin_middleware.py  service_middleware.py
states/: __init__.py  states.py
utils/: __init__.py  exec.py  image_selector.py  state_to_model.py  string_builder.py
(+14 files in other folders)
